# Zoonosim

./: .gitignore  Agents.py  Barns.py  Humans.py  LICENSE.txt  Options.py  Poultry.py  Questions.md  RAT_only)screening_serial.msim  README.md  Sim.py  Water.py  __init__.py  agent_module.py  analysis.py  barn_module.py  base.py  base_module.py  contacts_module.py  default_serial.msim  defaults.py  flock_module.py  flock_screening_serial.msim  flocks.py  human_module.py  immunity.py  interventions.py  misc.py  parameters.py  pathogen_interactions.py  pathogens.py  people.py  plotting.py  population.py  poultry.py  pyproject.toml  roster_module.py  run.py  settings.py  sim.py  (+7 more)
base/: BaseAgents.py  BaseRoster.py  BaseSim.py  Contacts.py  FlexDict.py  FlexPretty.py  Layer.py  LayerGroup.py  Misc.py  ParsObj.py  README.md  Result.py  __init__.py
calibration_scripts/: calibration.py  calibration_1.py  calibration_1_plots.py  calibration_2.py  calibration_2_results.csv  calibration_plots.py  calibration_sims.py  msim_plotter.py  study_viewer.py
config/: AgentMeta.py  DataTypes.py  Defaults.py  FlockMeta.py  FlocksMeta.py  Options.py  Parameters.py  PeopleMeta.py  PoultryMeta.py  README.md  __init__.py
contacts/: README.md  abattoir.py  behaviour_model.py  contact_networks.py  custom.py  data_distributions.py  defaults.py  equipment.py  farms.py  pop.py  resource.py  sampling.py  water.py
debugging_scripts/: calibration.py  compute_fit.py  contacts_plots.py  dill_debug.py  dill_debug_2.py  module_debug.py  para_debug.py  parallel_debugging.py  prognoses_calibration.py  (+2 more)
(+154 files in other folders)
